--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "alumni-tracker",
   "version": "0.1.0",
-  "homepage": "https://SouravSatheesh.github.io/Alumni-Tracker",
+  "homepage": "https://Beyond-Graduation.github.io/Beyond-Graduation/FrontEnd",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
