--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^5.1.3",
     "file-saver": "^2.0.5",
     "firebase": "^9.13.0",
+    "html-react-parser": "^3.0.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
     "react-circular-progressbar": "^2.1.0",
