--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
+    "react-image-crop": "^10.0.9",
     "react-multi-carousel": "^2.8.2",
     "react-pdf": "^5.7.2",
     "react-router-dom": "^6.3.0",
