--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "react-multi-carousel": "^2.8.2",
     "react-pdf": "^5.7.2",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-select": "^5.4.0",
     "react-toastify": "^9.0.7",
     "web-vitals": "^2.1.4"
@@ -31,7 +31,7 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
-    "build": "react-scripts build && cp build/index.html build/404.html",
+    "build": "react-scripts build && copy /Y build/index.html build/404.html",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
